--- a/app/views/replacements/edit.html.erb
+++ b/app/views/replacements/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Add A New Candidate</h1>
+<h1>Edit Candidate</h1>
 <%= form_for @replacement do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
