--- a/app/views/replacements/index.html.erb
+++ b/app/views/replacements/index.html.erb
@@ -1,13 +1,19 @@
-<h1 class="center-text"> Possible Wenger Replacements </h1>
-<img src="https://www.telegraph.co.uk/content/dam/football/2017/03/20/JS123808031_PA_Arsene-Wenger-File-Photo_trans_NvBQzQNjv4BqXZ2jEgyBj9XFFmv3X1XdDMVTRQP8z34z_-y55ik125I.jpg?imwidth=1400" style="width: 480px; height: 300px;" />
-<h3>
-All Things Must Come To An End, Wenger Out!
-</h3>
-<p>
-  Here are a list of possible replacements and their credentials for taking over for Arsene.
-</p>
+<h1 class="center" style="color: white"> Possible Wenger Replacements </h1>
+<h5 class="center" style="color: white">
+  Here are a list of possible replacements and their chances (1-10) for taking over for Arsene.
+</h5>
 <% @replacements.each do |replacement| %>
-  <h2><%= replacement.name %></h2>
-  <%= link_to 'Credentials', replacement_path(replacement) %>
+  <div class="center card red darken-4 row">
+    <div class="col s12">
+      <div class="card-action">
+    <h3><%= replacement.name %></h3>
+    <h4>Rating: <%= replacement.rating %><h4>
+      <h4> Chance of being next manager: <%= replacement.likelihood %> </h4>
+  <a class="btn-flat" <%= link_to 'Credentials', replacement_path(replacement)%></a>
+  <a class="btn-flat" <%= link_to 'Edit', edit_replacement_path(replacement) %> </a>
+  <a class="btn-flat" <%= link_to 'Remove', replacement, method: :delete %> </a>
   <% end %>
-  <p><%= link_to 'Enter a New Candidate', new_replacement_path %></p>
+      </div>
+    </div>
+  </div>
+  <a class="btn-flat" <%= link_to 'Enter a New Candidate', new_replacement_path %> </a>
